--- a/charts/unlimited-onlyoffice-kubernetes/values.yaml
+++ b/charts/unlimited-onlyoffice-kubernetes/values.yaml
@@ -1,8 +1,8 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/thomisus/onlyoffice-documentserver-unlimited
-  tag: "8.1.3"
+  repository: dpaktamang/unlimited-onlyoffice
+  tag: "8.3.0"
   pullPolicy: IfNotPresent
 
 database:
